lbdb (0.26.1) unstable; urgency=low

  * Rebuild configure with autoconf 2.57.
  * Add long options --version and --help to ldbdq and man page.
  * Support multiple address book files with abook.  Thanks to Etienne
    PIERRE <marluchon@netcourrier.com> for providing this patch.
  * New mail address of Brian Salter-Duke <b_duke@octa4.net.au>.

 --

lbdb (0.26) unstable; urgency=low

  * m_finger: Suppress lines where real name is '???' (some versions of
    finger seem to use this for non existing users) (Closes: #112127).
  * m_wanderlust: new module to read ~/.addesses file from WanderLust
    MUA.  Module provided by Gergely Nagy <algernon@debian.org>.
    (Closes: #133209).
  * Quote the search string in m_yppasswd, m_nispasswd and m_getent as
    mentioned by Gary Johnson <garyjohn@spk.agilent.com>.
  * Add CVS Id tags to all modules.

 -- Roland Rosenfeld <roland@debian.org>  Mon, 11 Feb 2002 20:23:42 +0100

lbdb (0.25.2) unstable; urgency=low

  * New version (1.10) of lbdb.el by Dave Pearson <davep@davep.org>:
    Fixes the fact that, when in an emacs that doesn't have
    `line-{beginning,end}-position' available (xemacs, for example) I
    wasn't defining fully compatible versions.
  * Add short description to mutt_ldap_query in NAME section.
  * Add m_getent by Adrian Likins <alikins@redhat.com>, which can replace
    m_passwd and m_yppasswd on systems where getent(1) is installed.
  * Add option -a to fetchaddr and lbdb-fetchaddr to fetch also addresses
    without realname.
  * Upgrade to Policy version 3.5.6 (no changes).
  * Use debhelper >= 2.2.0
    - Use DH_COMPAT=3 instead of DH_COMPAT=2
    - remove debian/conffiles, which is automatically generated by
      DH_COMPAT=3.
    - replace dh_installmanpages by dh_installman
    - dh_strip now knows about DEB_BUILD_OPTIONS=nostrip itself
    - activate dh_perl, because we also build perl scripts.
    - Add ${perl:Depends} to debian/control.
