@@ -2,8 +2,8 @@ Source: lbdb
 Section: mail
 Priority: optional
 Maintainer: Roland Rosenfeld <roland@debian.org>
-Standards-Version: 3.5.6
-Build-Depends: debhelper (>= 2.2.0), perl
+Standards-Version: 3.5.8
+Build-Depends: debhelper (>= 4.0.0), perl
 
 Package: lbdb
 Architecture: any
