@@ -5,8 +5,11 @@ lbdb (0.26.1) unstable; urgency=low
   * Support multiple address book files with abook.  Thanks to Etienne
     PIERRE <marluchon@netcourrier.com> for providing this patch.
   * New mail address of Brian Salter-Duke <b_duke@octa4.net.au>.
+  * Upgrade to Standards-Version 3.5.8 (handling of compiler optimization
+    in DEB_BUILD_OPTIONS changed).
+  * Upgrade to debhelper 4.
 
- --
+ -- Roland Rosenfeld <roland@debian.org>  Sat,  8 Feb 2003 18:10:02 +0100
 
 lbdb (0.26) unstable; urgency=low
 
